wflow_publish("analysis/index.Rmd")

--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -25,3 +25,4 @@ wflow_open("analysis/teeth.Rmd")
 
 * [Teeth growth analysis](teeth.html)
 
+*[Click here to check out Rio's Project!](https://rsalazar2.github.io/myproject/)
